syntax = "proto3";

package ChittyChat;
option go_package = "github.com/Mlth/Chitty-chat;chat";

message writtenMessage {
  string name = 1;
  string message = 2;
  string timeStamp = 3;
  int32 id = 4;
}

message leaveMessage {
  int32 id = 1;
}

message emptyMessage {

}

service chat {
  rpc SendMessage(writtenMessage) returns (emptyMessage);
  rpc LeaveServer(leaveMessage) returns (emptyMessage);
  rpc JoinServer(writtenMessage) returns (stream writtenMessage);
}